feat(frontend): Enhance CSV upload UX with improved drag-drop and file selection feedback
- Rename loadLogs() to loadDashboardLogs() for clarity
- Add console logging throughout upload flow for debugging
- Improve drag-and-drop visual feedback with background color changes
- Display selected filename in upload hint with success styling
- Auto-upload file after selection via file input or drag-drop
- Simplify upload area click handler to directly open file picker
- Add error logging when upload area elements are not found
- Update upload area styling with smooth transitions and hover effects
- Replace "Browse..." link with clearer "click to browse" text
- Add upload hint element to display selected file feedback
- Consolidate file selection logic across drag-drop and click handlers

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -95,8 +95,9 @@
                     <h2>Upload Leads</h2>
                     <div class="upload-box">
                         <div class="upload-area" id="uploadArea">
-                            <p>Drag and drop CSV file here, or <span class="browse-link">Browse...</span></p>
+                            <p>📁 Drag and drop CSV file here, or click to browse</p>
                             <input type="file" id="csvFile" accept=".csv" style="display: none;">
+                            <p class="upload-hint" id="uploadHint" style="margin-top: 10px; color: #666; font-size: 14px;"></p>
                         </div>
                         <button class="btn btn-upload" onclick="uploadLeads()">📤 UPLOAD CSV</button>
                     </div>
