feat(scheduler): Implement APScheduler for production-grade background processing
- Add APScheduler integration with parallel task execution (email sending, reply checking, daily reset)
- Implement PostgreSQL support with automatic cloud database detection and connection pooling
- Add health monitoring endpoint (/health) for uptime monitoring and crash recovery verification
- Update database configuration to support both SQLite and PostgreSQL with environment-based selection
- Enhance reply_checker with improved error handling and automatic retry logic
- Update frontend with production deployment indicators and status monitoring
- Add comprehensive deployment guides for Railway, Render, and cloud platforms
- Update dependencies (pyproject.toml) with APScheduler and psycopg2 for PostgreSQL
- Restructure README with production-ready quick start and architecture documentation
- Add Procfile and cloud platform configuration files for seamless deployment
- Implement crash recovery mechanisms with automatic task restart on failures
- Enable horizontal scaling support with stateless architecture design

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -243,6 +243,20 @@
                         <textarea id="followup2Body" class="textarea-field" rows="6"
                             placeholder="Second follow-up body"></textarea>
                     </div>
+
+                    <!-- Auto-Reply Template -->
+                    <div class="template-column">
+                        <h3>📅 Auto-Reply (when they respond)</h3>
+                        <label>Subject</label>
+                        <input type="text" id="replySubject" class="input-field" placeholder="Enter subject">
+                        <label>Body</label>
+                        <div id="replyVariables" class="inline-variables"></div>
+                        <textarea id="replyBody" class="textarea-field" rows="6"
+                            placeholder="Auto-reply with calendar link. Use {{calendar_link}} for your calendar."></textarea>
+                        <p style="font-size: 12px; color: #666; margin-top: 5px;">
+                            💡 Available: {{first_name}}, {{company}}, {{calendar_link}}, {{email}}, and any CSV columns
+                        </p>
+                    </div>
                 </div>
 
                 <button class="btn btn-save" onclick="saveTemplates()">💾 SAVE TEMPLATES</button>
